--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "npx nodemon server.js -w server"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "async": "^3.2.0",
-    "bcrypt": "^4.0.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0",
-    "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.4.6",
-    "nodemailer-sendgrid-transport": "^0.2.0",
-    "regex": "^0.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.3"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon server.js",
+		"start": "node server.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"async": "^3.2.0",
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
+		"express-validator": "^6.4.1",
+		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.24.0",
+		"multer": "^1.4.2",
+		"mysql": "^2.18.1",
+		"nodemailer": "^6.4.6",
+		"nodemailer-sendgrid-transport": "^0.2.0",
+		"regex": "^0.1.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.3"
+	}
 }
