--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_USER='root'
 DB_PASSWORD=''
 DB_NAME='grocery_db_node'
 
-PROD_DB_USER='OpQwUTbwzP'
-PROD_DB_NAME='OpQwUTbwzP'
-PROD_DB_PASSWORD='u8w9t4CNxh'
-PROD_DB_HOST='remotemysql.com'
+PROD_DB_USER='ba757c74fa2b05'
+PROD_DB_NAME='heroku_0568fc6288c4c7a'
+PROD_DB_PASSWORD='9c440856'
+PROD_DB_HOST='us-cdbr-east-02.cleardb.com'
